# ChangeLog for dev-perl/Apache-Session
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Session/ChangeLog,v 1.61 2011/09/04 11:23:10 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Apache-Session-1.89.ebuild:
  Cleanup

*Apache-Session-1.890.0 (01 Sep 2011)

  01 Sep 2011; Torsten Veller <tove@gentoo.org> +Apache-Session-1.890.0.ebuild:
  Change version scheme

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Apache-Session-1.88.ebuild:
  Cleanup

*Apache-Session-1.89 (30 Sep 2010)

  30 Sep 2010; Robin H. Johnson <robbat2@gentoo.org>
  +Apache-Session-1.89.ebuild:
  Version bump via perl-bump experimental tool.

  28 Jan 2010; Torsten Veller <tove@gentoo.org> Apache-Session-1.88.ebuild:
  Fix LICENSE: same terms as perl (#301969)

  08 May 2009; Torsten Veller <tove@gentoo.org> Apache-Session-1.88.ebuild:
  Add unzip to DEPEND

  02 May 2009; Torsten Veller <tove@gentoo.org> -Apache-Session-1.87.ebuild:
  Cleanup

*Apache-Session-1.88 (23 Dec 2008)

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +Apache-Session-1.88.ebuild:
  Version bump.

*Apache-Session-1.87 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +Apache-Session-1.87.ebuild:
  Version bump.

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Apache-Session-1.81.ebuild,
  -Apache-Session-1.82.ebuild, Apache-Session-1.83.ebuild:
  Cleanup

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Apache-Session-1.83.ebuild:
  amd64 stable

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Apache-Session-1.83.ebuild:
  Stable on sparc

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Apache-Session-1.83.ebuild:
  Stable on ppc.

  28 Jul 2007; Raúl Porcel <armin76@gentoo.org> Apache-Session-1.83.ebuild:
  alpha/ia64/x86 stable

  08 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  -Apache-Session-1.80.ebuild, -Apache-Session-1.80-r1.ebuild:
  Cleaning up
