@@ -1,18 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST Class-Autouse-1.29.tar.gz 33891 RMD160 d1c82d5d1bfb8cb45afae4c20b4ffd12123887fe SHA1 8563b51c8f0c62e277fe13ea886ea22d2cb0e58b SHA256 bfd4e555c019aa42662ab2d1664c65265ea6e6d82f3c3242dd6c113d14a6a811
 DIST Class-Autouse-2.00.tar.gz 52116 RMD160 c4a547630a489510b85e32ee21a1688b765b14bf SHA1 af8fbcaef6d6e812aad058f6c7967475bc0fbe93 SHA256 0f20d3f7cd86cc5f013250551d2e62de9ca21a925f8c9294d255ac78dc02f5e0
 DIST Class-Autouse-2.01.tar.gz 52719 RMD160 532bd1d71a0c1f096307199fc9dcb526d8a5fecf SHA1 875dadc0c92d617f1f38089240bf07b1b360d8ae SHA256 c05b3236c05719d819c20db0fdeb6d0954747e43d7a738294eed7fbcf36ecf1b
 EBUILD Class-Autouse-1.29.ebuild 715 RMD160 4391bfd2b403eb630bf548a75f1842f7e502218d SHA1 9fb3be554b21a53bae858241700a1f23e5f831fb SHA256 5d66e5daad38de6c00cc3b20dbec4f57c50546e41fbee8e565102cf0b34b166e
-EBUILD Class-Autouse-2.0.0.ebuild 582 RMD160 46cb07cbae0c08defed9ff498f9cfcbf2082a004 SHA1 0b5df9e2b1f9b0d79fd8d3c5d8bae9fe6b6ba6b2 SHA256 c29a84df1bd822570ba6000762110f13b035ee3257e131a0ea40083ea41624f4
+EBUILD Class-Autouse-2.0.0.ebuild 580 RMD160 1497829e8e57477ea88f03db919472cf3ea4c3ac SHA1 72df28d1136e55ed1e161927277d14eedfce92a4 SHA256 a88b0ca1290b4aabb6ecb6222e350f95047cd4ff12aa2cf8ec83b39c4c3f4ca5
 EBUILD Class-Autouse-2.10.0.ebuild 583 RMD160 75bc08ff99df7ac0461a5ff00efe475667117c7e SHA1 fea056e2bb9af264865d21854731b2ab86898b6d SHA256 f4c1566784d4677458ee1a106c9018d2e2449870a09d36737a222bbcb87ea8f9
-MISC ChangeLog 8483 RMD160 a0e260f770337f9668d1543d04700ac4c290e67e SHA1 d4d5ef021e765c0b20849c58c1ed0c8e4e263edb SHA256 5925ab78ae4e446c4b3bab3e14462606d33c890573bdd05aecd161e823b001f1
+MISC ChangeLog 8596 RMD160 7b74edb82d64dce5ffa08ff47993f96c154eb300 SHA1 51973d0181650d664e85a98ba71aad991e22135a SHA256 63e99e1aaabda5b036431ba1e6fd9eeb68c454b06fe48b2bc20593ba7b0b709d
 MISC metadata.xml 239 RMD160 bb7df1d4dcb14c9e8e500a1ed1941d4d5b5ad1cb SHA1 e177c172fadbb128c9bac395d8004d4a123e73c6 SHA256 d59806ed030b42aa80dab9f9e3e47f30d0680d0a41710d611ad1d6dec80882c9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk8s4WQACgkQV3J2n04Eaux3LgCeMFK83+mcmW6Vv2yPpawBvmmk
-t7gAni+kArT6365l9/ZUt0+VkhGlmQKg
-=XSWa
+iQEcBAEBCgAGBQJPR18CAAoJEOTDgjZ80txd89YH/iOwAm0xd75V7b9Lnm1H9hYT
+mgaWJK8S6mcOYWATxFnxqUWsMsAC0fuhKagiyn5mEUPbOLOq991lGaWS1VWhq/kS
+88cqKKGV0Fl2IgcJP6YpWM70PleHArrqi1KORS6Ulmnb6VKSRZZeC6ET1ahF/bMp
+Dm2LXezIRISDXymOT93NRE599fm11pJpdpcB8DoFj5ao5e4qcgh7QuAtBbQhb04x
+S+UQSU7CHe9c1vaaOgq3HSYAUujObS2T1UCOW754k2o3+DxnmyBlpvoT2+SFYgAc
+UvRB7ioEXrFxfzGCSg7JJ+FO8nONN5LQFqJlW3YkACDJdN7Ox0n6Z3tKEMJXVMc=
+=CMnB
 -----END PGP SIGNATURE-----
