@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Apache-Session
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Session/ChangeLog,v 1.61 2011/09/04 11:23:10 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Session/ChangeLog,v 1.62 2012/02/24 09:52:40 ago Exp $
+
+  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> Apache-Session-1.890.0.ebuild:
+  Stable for amd64, wrt bug #400031
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -Apache-Session-1.89.ebuild:
   Cleanup
